--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client:dev": "vite",
     "server:dev": "nodemon server/index.js",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "cd client && eslint .",
     "preview": "vite preview",
     "server": "node server/index.js"
   },
