--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vite build",
     "lint": "cd client && eslint .",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.12.2",
