--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/canvas-crafters
+MONGODB_URI=mongodb+srv://vennywanjiru:sayjay77@mernstack.gb9x0em.mongodb.net/canvas-crafters?retryWrites=true&w=majority&appName=MERNSTACK
+JWT_SECRET=canvas-crafters-super-secret-jwt-key-2024-make-it-very-long-and-random-for-security
 CLIENT_URL=http://localhost:5173
 
 # Frontend Environment Variables (for Vite)
