Configure Vercel full-stack deployment
- Add vercel.json for full-stack deployment configuration
- Update package.json with vercel-build script
- Configure client package.json for Vercel build
- Update .env.production for Vercel environment
- Set up proper API routing: /api/* -> server, /* -> client
- Configure environment variables for production deployment

This will enable the login functionality by properly routing
API requests to the backend server on the same domain.

--- a/.env.production
+++ b/.env.production
@@ -1,17 +1,21 @@
-# Production Environment Variables for Railway (Backend)
+# Production Environment Variables for Vercel Full-Stack Deployment
 
 # Server Configuration
 NODE_ENV=production
-PORT=$PORT
 
-# Database (You'll need to set this in Railway dashboard)
-MONGODB_URI=$MONGODB_URI
+# Frontend API Configuration
+VITE_API_URL=https://canvas-crafters.vercel.app/api
+VITE_SOCKET_URL=https://canvas-crafters.vercel.app
+VITE_APP_NAME=Canvas Crafters
 
-# JWT Secret (You'll need to set this in Railway dashboard)
-JWT_SECRET=$JWT_SECRET
+# Backend Configuration
+CLIENT_URL=https://canvas-crafters.vercel.app
 
-# Client URL (Update with your Vercel domain)
-CLIENT_URL=https://canvas-crafters-frontend.vercel.app
+# Database (Set in Vercel Environment Variables Dashboard)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/canvas-crafters
+
+# JWT Secret (Set in Vercel Environment Variables Dashboard)
+# JWT_SECRET=your-super-secure-jwt-secret
 
 # Socket.io Configuration
-SOCKET_CORS_ORIGIN=https://canvas-crafters-frontend.vercel.app
+SOCKET_CORS_ORIGIN=https://canvas-crafters.vercel.app
