--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,10 @@
     },
     {
       "src": "server/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
@@ -19,13 +22,14 @@
       "dest": "/server/index.js"
     },
     {
+      "src": "/socket.io/(.*)",
+      "dest": "/server/index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/client/dist/$1"
     }
   ],
-  "env": {
-    "NODE_ENV": "production"
-  },
   "functions": {
     "server/index.js": {
       "maxDuration": 30
