Simplify Vercel deployment: frontend-only with environment variable API URL

--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,11 @@
-# Production Environment Variables for Vercel Full-Stack Deployment
+# Production Environment Variables for Hybrid Deployment (Vercel + Railway)
 
 # Server Configuration
 NODE_ENV=production
 
-# Frontend API Configuration
-VITE_API_URL=https://canvas-crafters.vercel.app/api
-VITE_SOCKET_URL=https://canvas-crafters.vercel.app
+# Frontend API Configuration (Railway Backend)
+VITE_API_URL=https://canvas-crafters-production.up.railway.app/api
+VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app
 VITE_APP_NAME=Canvas Crafters
 
 # Backend Configuration
