--- a/client/.env.production
+++ b/client/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables for Vercel (Frontend)
 
 # API URLs (Update with your Railway backend URL)
-VITE_API_URL=https://your-railway-backend.railway.app/api
-VITE_SOCKET_URL=https://your-railway-backend.railway.app
+VITE_API_URL=https://canvas-crafters-production.up.railway.app/api
+VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app
 
 # App Configuration
 VITE_APP_NAME=Canvas Crafters
