--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "client:dev": "vite",
     "server:dev": "nodemon server/index.js",
-    "build": "cd client && vite build",
-    "vercel-build": "cd client && npm install && vite build",
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "vercel-build": "npm install --prefix client && npm run build --prefix client",
     "lint": "cd client && eslint .",
     "preview": "vite preview",
     "server": "node server/index.js",
