--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "framework": "vite",
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "cd client && npm install",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/((?!api/.*).*)",
