--- a/client/.env.production
+++ b/client/.env.production
@@ -1,6 +1,6 @@
 # Production Environment Variables for Vercel (Frontend)
 
-# API URLs (Update with your Railway backend URL)
+# API URLs (Railway backend)
 VITE_API_URL=https://canvas-crafters-production.up.railway.app/api
 VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app
 
