--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install --prefix client && npm run build --prefix client",
   "outputDirectory": "client/dist",
-  "installCommand": "npm install",
-  "env": {
-    "VITE_API_URL": "https://canvas-crafters-production.up.railway.app/api",
-    "VITE_SOCKET_URL": "https://canvas-crafters-production.up.railway.app",
-    "VITE_APP_NAME": "Canvas Crafters",
-    "VITE_APP_ENV": "production"
-  },
+  "installCommand": "npm install --prefix client",
   "rewrites": [
     {
       "source": "/((?!api/.*).*)",
