FRESH DEPLOYMENT: Simplified Vercel config with proper env vars

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
-  "buildCommand": "cd client && npm install && VITE_API_URL=https://canvas-crafters-production.up.railway.app/api VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app npm run build",
+  "framework": "vite",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
   "installCommand": "cd client && npm install",
+  "env": {
+    "VITE_API_URL": "https://canvas-crafters-production.up.railway.app/api",
+    "VITE_SOCKET_URL": "https://canvas-crafters-production.up.railway.app"
+  },
   "rewrites": [
     {
       "source": "/((?!api/.*).*)",
