Fix demo credentials consistency and update deployment URLs
- Correct demo email from demo@example.com to demo@canvascrafters.com in Login.tsx
- Update .env.production to reflect Netlify deployment instead of Vercel
- Ensure consistent demo credentials across frontend and backend
- Demo credentials: demo@canvascrafters.com / demo123

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# Production Environment Variables for Hybrid Deployment (Vercel + Railway)
+# Production Environment Variables for Hybrid Deployment (Netlify + Railway)
 
 # Server Configuration
 NODE_ENV=production
@@ -9,13 +9,13 @@ VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app
 VITE_APP_NAME=Canvas Crafters
 
 # Backend Configuration
-CLIENT_URL=https://canvas-crafters.vercel.app
+CLIENT_URL=https://canvas-crafters.netlify.app
 
-# Database (Set in Vercel Environment Variables Dashboard)
+# Database (Set in Netlify Environment Variables Dashboard)
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/canvas-crafters
 
-# JWT Secret (Set in Vercel Environment Variables Dashboard)
+# JWT Secret (Set in Netlify Environment Variables Dashboard)
 # JWT_SECRET=your-super-secure-jwt-secret
 
 # Socket.io Configuration
-SOCKET_CORS_ORIGIN=https://canvas-crafters.vercel.app
+SOCKET_CORS_ORIGIN=https://canvas-crafters.netlify.app
