--- a/client/.env.production
+++ b/client/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Variables for Vercel (Frontend)
 
-# API URLs (Railway backend)
-VITE_API_URL=https://canvas-crafters-production.up.railway.app/api
-VITE_SOCKET_URL=https://canvas-crafters-production.up.railway.app
+# API URLs (Render backend)
+VITE_API_URL=https://canvas-crafters.onrender.com/api
+VITE_SOCKET_URL=https://canvas-crafters.onrender.com
 
 # App Configuration
 VITE_APP_NAME=Canvas Crafters
