--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
   ],
   "build": {
     "env": {
-      "VITE_API_URL": "https://canvas-crafters-production.up.railway.app/api",
-      "VITE_SOCKET_URL": "https://canvas-crafters-production.up.railway.app"
+      "VITE_API_URL": "https://canvas-crafters.onrender.com/api",
+      "VITE_SOCKET_URL": "https://canvas-crafters.onrender.com"
     }
   }
 }
