--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "vercel-build": "npm install && vite build",
+    "vercel-build": "rm -rf node_modules package-lock.json && npm install --force && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.22.4",
     "@tanstack/react-query": "^5.12.2",
     "axios": "^1.6.2",
     "lucide-react": "^0.344.0",
@@ -22,7 +23,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.22.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
